force-app/main/default/objects/JT_ErrorLog__c/JT_ErrorLog__c.object-meta.xml
<CustomObject>
    <description
  >Error log for tracking exceptions and errors encountered by users. Used for debugging and support purposes.</description>
    <label>Error Log</label>
    <nameField>
        <displayFormat>ERR-{0000000}</displayFormat>
        <label>Error Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>