force-app/main/default/objects/JT_ErrorLog__c/fields/JT_AdditionalDetails__c.field-meta.xml
<CustomField>
    <fullName>JT_AdditionalDetails__c</fullName>
    <description
  >Additional context information (JSON format recommended for structured data)</description>
    <label>Additional Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>