force-app/main/default/objects/JT_ErrorLog__c/fields/JT_Context__c.field-meta.xml
<CustomField>
    <fullName>JT_Context__c</fullName>
    <description
  >Context where error occurred (e.g., component name, method name, user action)</description>
    <label>Context</label>
    <length>255</length>
    <type>Text</type>
</CustomField>