force-app/main/default/objects/JT_ErrorLog__c/fields/JT_ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>JT_ErrorMessage__c</fullName>
    <description>User-friendly error message displayed to the user</description>
    <label>Error Message</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>