force-app/main/default/objects/JT_ErrorLog__c/fields/JT_ErrorType__c.field-meta.xml
<CustomField>
    <fullName>JT_ErrorType__c</fullName>
    <description
  >Type/category of error (e.g., Permission Denied, License Restriction, SOQL Syntax Error, etc.)</description>
    <label>Error Type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>