force-app/main/default/objects/JT_ErrorLog__c/fields/JT_ExceptionType__c.field-meta.xml
<CustomField>
    <fullName>JT_ExceptionType__c</fullName>
    <description
  >Apex exception type (e.g., AuraHandledException, QueryException, DmlException)</description>
    <label>Exception Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>