force-app/main/default/objects/JT_ErrorLog__c/fields/JT_OrgType__c.field-meta.xml
<CustomField>
    <fullName>JT_OrgType__c</fullName>
    <description>Organization type where error occurred</description>
    <label>Org Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>