force-app/main/default/objects/JT_ErrorLog__c/fields/JT_Resolved__c.field-meta.xml
<CustomField>
    <fullName>JT_Resolved__c</fullName>
    <description>Whether this error has been resolved or addressed</description>
    <defaultValue>false</defaultValue>
    <label>Resolved</label>
    <type>Checkbox</type>
</CustomField>