force-app/main/default/objects/JT_ErrorLog__c/fields/JT_Severity__c.field-meta.xml
<CustomField>
    <fullName>JT_Severity__c</fullName>
    <description>Error severity level</description>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restrictedPicklist>true</restrictedPicklist>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>