force-app/main/default/objects/JT_ErrorLog__c/fields/JT_StackTrace__c.field-meta.xml
<CustomField>
    <fullName>JT_StackTrace__c</fullName>
    <description
  >Full stack trace for debugging and support purposes</description>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>