force-app/main/default/objects/JT_ErrorLog__c/fields/JT_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>JT_Timestamp__c</fullName>
    <description>When the error occurred</description>
    <label>Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>